<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/top_anime"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/top" />
        <item
            android:id="@+id/by_genre"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/by_genre" />
        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/favorites" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
